# tiny-semantic-caching

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
scripts/: docker-compose.yaml
src/: __init__.py  base.py  embed_text.py  vector_db.py
